# se-toolkit-hackathon

./: .env.docker.example  .env.docker.secret  LICENSE  PLAN.md  README.md  REPORT.md  command_for_nanobot  docker-compose.yml  docker-compose.yml.backup  seed_desserts.sql
.qwen/: settings.json
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: desserts.py  orders.py
backend/app/db/: database.py
backend/app/models/: dessert.py  order.py
caddy/: Caddyfile
client/: pubspec.yaml
client/docker/: Dockerfile  nginx.conf
client/lib/: main.dart
client/lib/config/: constants.dart  dessert_images.dart
client/lib/models/: cart_item.dart  dessert.dart
client/lib/screens/: cart_screen.dart  chat_screen.dart  home_screen.dart  my_orders_screen.dart  order_form_screen.dart  order_success_screen.dart
client/lib/services/: api_service.dart  cart_service.dart  chat_service.dart
client/lib/widgets/: chat_message.dart  dessert_card.dart  hero_banner.dart  search_bar.dart
client/web/: index.html  manifest.json
mcp/mcp-desserts/: Dockerfile  pyproject.toml
mcp/mcp-desserts/src/mcp_desserts/: __init__.py  server.py
nanobot/: Dockerfile  __init__.py  config_loader.py  dessert_schema.py  entrypoint.py  pyproject.toml
nanobot/workspace/skills/desserts/: SKILL.md
