[project]
name = "nanobot-desserts"
version = "0.1.0"
description = "Dessert catalog agent for hackathon"
# readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "opentelemetry-distro[otlp]>=0.40b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.40b0",

    # Обязательно для MCP-серверов:
    "mcp>=1.0.0",
    "httpx>=0.25.0",

    # Если позже добавишь webchat — раскомментируй:
    # "mcp-webchat",
    # "nanobot-webchat",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nanobot-desserts = "nanobot.entrypoint:main"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]